<resources>
    <string name="app_name">TriviaQuiz</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="start_game">Start Game</string>
    <string name="gameTitle">Guess the Scientist</string>
    <string name="playerNameHint">Enter your name</string>
    <string name="mainTitle">Who\'s the Scientist?</string>
    <string name="quizImage_description">The main app logo. Two figures talking with one asking a question and one providing an answer.</string>
    <string name="noPlayerName">Please Enter a Name</string>
    <string name="add">Add</string>
    <string name="wernher">Wernher-Von\nBraun</string>
    <string name="subrahamanyan">Subrahmanyan\nChandrasekhar</string>
    <string name="marie">Marie\nCurie</string>
    <string name="charles">Charles\nDarwin</string>
    <string name="albert">Albert\nEinstein</string>
    <string name="rosalind">Rosalind\nFranklin</string>
    <string name="millikan">Millikan\nFaraday</string>
    <string name="issac">Issac\nNewton</string>
    <string name="carl">Carl\nSagan</string>
    <string name="chien">Chien\nShiung Wu</string>
    <string name="wrong_xue">Xue-Min\nCheng</string>
    <string name="wrong_zhang">Lixia\nZhang</string>
    <string name="wrong_suk_fong">Anna Suk-\nFong Lok</string>
    <string name="wrong_matt_harris">Matthew\nHarris</string>
    <string name="wrong_brian">Brian\nCox</string>
    <string name="wrong_luis">Luis\nAlvarez</string>
    <string name="wrong_aristotle">Aristotle\n </string>
    <string name="wrong_alex">Alexander\nGraham Bell</string>
    <string name="wrong_rachel">Rachel\nCarson</string>
    <string name="wrong_james">James\nChadwick</string>
    <string name="wrong_dalton">John\nDalton</string>
    <string name="wrong_copernicus">Nicolaus\nCopernicus</string>
    <string name="wrong_sophie">Sophie\nGermain</string>
    <string name="wrong_jane">Jane\nGoodall</string>
    <string name="wrong_edwin">Edwin\nHubble</string>
    <string name="wrong_irene">Irene\nJoliot-Curie</string>
    <string name="wrong_carolus">Carolus\nLinnaeus</string>
    <string name="wrong_maxwell">James Clerk\nMaxwell</string>
    <string name="wrong_barbara">Barbara\nMcClintock</string>
    <string name="wrong_dmitri">Dmitri\nMendeleev</string>
    <string name="wrong_florance">Florence\nNightingale</string>
    <string name="wrong_alfred">Alfred\nNobel</string>
    <string name="wrong_max">Max\nPlanck</string>
    <string name="wrong_srinivasa">Srinivasa\nRamanujan</string>
    <string name="wrong_rudolf">Rudolf\nVirchow</string>
    <string name="wrong_wegener">Alfred\nWegener</string>
    <string name="wrong_nath">Satyendra\nNath Bose</string>
    <string name="wrong_chandra">Prasanta\nChandra</string>
    <string name="wrong_frank">Frank\nHerbert</string>
    <string name="wrong_karl">Karl\nLandsteiner</string>
    <string name="qHint_einstein">E = mc^2</string>
    <string name="qHint_sagan">We\'re all made of star stuff.</string>
    <string name="qHint_braun">Developed the rockets that launched the United States\' first space satellite.</string>
    <string name="qHint_chandrasekhar">Discovered that massive stars can collapse under their own gravity to reach infinite density.</string>
    <string name="qHint_curie">Made numerous pioneering contributions to the study of radioactive elements.</string>
    <string name="qHint_darwin">Proposed the theory of evolution by natural selection.</string>
    <string name="qHint_franklin">Provided much of the experimental data used to establish the structure of DNA.</string>
    <string name="qHint_faraday">Discovered the first experimental link between light and magnetism.</string>
    <string name="qHint_newton">For every action, there is an equal and opposite reaction.</string>
    <string name="qHint_shiung">Helped develop the process for separating uranium into uranium-235 and uranium-238.</string>
    <string name="hint">Hint</string>
    <string name="hint_title">They\'re Famous For</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="right_guessTitle">Nice Job!</string>
    <string name="wrong_guessTitle">Oh No!</string>
    <string name="right_guessMsg">You guessed correctly!</string>
    <string name="wrong_guessMsg">Better luck next time!</string>
    <string name="backWarning_title">Are you sure?</string>
    <string name="backWarning_msg">If you navigate back you\'ll loose all progress in this game. Do you want to go back?</string>
    <string name="thanks">Thanks For Playing!</string>
    <string name="congrats">Congratulations %1$s you got %2$d questions right!</string>
    <string name="display_score">Score: %1$d</string>
    <string name="display_remain">Remaining: %1$d</string>
    <string name="how_to_play">How to Play:</string>
    <string name="help_text">
        The point of the game is to guess the name of the scientist who\'s photo is displayed.\n\nPress
        the name of who you think it is!\n\nIf
        you\'d like to know what this person is famous for, click on Hint :)\n\nHave Fun!!
    </string>
    <string name="about_title">About this App:</string>
    <string name="about_text">
        This is a fun trivia app developed and implemented by Bradley Killins.\n\nThis
        is Assignment 2 for\nSODV3203: Mobile Application Development
    </string>
    <string name="score_filler">Score: X</string>
    <string name="remaining_filler">Remaining: X</string>

</resources>