<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mainTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="16dp" />

    <ImageView
        android:id="@+id/mainImage_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:contentDescription="@string/quizImage_description"
        app:layout_constraintBottom_toTopOf="@id/playerName_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTitle_textView"
        app:srcCompat="@drawable/quiz" />

    <EditText
        android:id="@+id/playerName_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="AUTOFILL_HINT_PERSON_NAME_GIVEN"
        android:hint="@string/playerNameHint"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toTopOf="@id/btnStartGame" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>